# english_study_bot

./: .env  README.md  bot_example.py  echo_bot_example.py  edu_bot_example_1.py  edubot.py  hello.py  main.py  pyproject.toml  test.ipynb  test_db.ipynb  yandex_assist_example.py
app/: keyboards.py  user_router.py  user_states.py  utils.py
app/configs/: baseline.yaml
app/database/: literary_works.json  models.py  requests.py
app/database/graphs/: __init__.py  knowledge_graph.py
app/database/requests/: requests.py  setters_and_getters.py  user_requests.py
app/keyboards/: keyboards.py
app/llm/: LLMClient.py  prompter.py  utils.py
app/recommender/: __init__.py  base_recommender.py
app/routers/: __init__.py  admin_router.py  organization_router.py  registration_router.py  teacher_router.py  user_router.py
app/states/: __init__.py  admin_states.py  registraion_states.py  teacher_states.py  user_states.py
data/: blue_beard.txt  borges_garden_fantastic.txt  bot_history.db  theory_of_adaptation.txt
data/prompts/: base_create_question.txt
outputs/2025-03-04/15-26-48/.hydra/: hydra.yaml
outputs/2025-03-04/15-27-07/.hydra/: hydra.yaml
outputs/2025-03-04/15-42-40/.hydra/: hydra.yaml
outputs/2025-03-04/15-43-56/.hydra/: config.yaml  (+1 more)
src/: edubot.py  knowledge_graph.py  recommender.py
src/bot/: __init__.py  edubot.py
src/configs/: baseline.yaml
src/database/: database.py
src/graphs/: __init__.py  base_graph.py  knowledge_graph.py
src/llm/: LLMClient.py  LLMFormater.py
src/recommender/: __init__.py  base_recommender.py
testing/: test.ipynb
(+9 files in other folders)
