[project]
name = "edubot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "dvc>=3.59.1",
    "greenlet>=3.1.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pymongo>=4.11.2",
    "python-telegram-bot>=21.11.1",
    "sqlalchemy>=2.0.38",
    "telegram>=0.0.1",
    "together>=1.4.1",
    "yandex-cloud-ml-sdk>=0.4.1",
]
